--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.datasource.url=jdbc:postgresql://${postgres.host:localhost}:${postgres.port:65432}/${postgres.db:yagodda}
 spring.datasource.username=${postgres.user:user}
 spring.datasource.password=${postgres.password:5jiEV6R4}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+
+file.storage.path=./file-storage/
+
